test_suite/tests/macros/ui/unit_return_type.stderr
error: custom attribute panicked
 --> tests/macros/ui/unit_return_type.rs:3:1
  |
3 | #[provide]
  | ^^^^^^^^^^
  |
  = help: message: function compute must have a return type
