test_suite/tests/macros/ui/unit_return_type.rs
use dilib::provide;

#[provide]
fn compute() {}

fn main(){}